--- a/clang/lib/Parse/CMakeLists.txt
+++ b/clang/lib/Parse/CMakeLists.txt
@@ -16,6 +16,7 @@ add_clang_library(clangParse
   ParseInit.cpp
   ParseObjc.cpp
   ParseOpenMP.cpp
+  ParseNOMP.cpp
   ParsePragma.cpp
   ParseStmt.cpp
   ParseStmtAsm.cpp
